k8s/synapse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: knarr
spec:
  selector:
    app: synapse
  ports:
    - port: 8008
      targetPort: 8008
      protocol: TCP
  type: ClusterIP
